// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Container: Change Plan should render 1`] = `
<form>
  <t>
    <Grid.Column>
      <t
        title="Select A Plan"
      >
        <Component />
      </t>
      <t
        actions={null}
        title="Pay With New Credit Card"
      >
        <Panel.Section>
          <Connect(PaymentForm)
            formName="changePlan"
          />
        </Panel.Section>
        <Panel.Section>
          <Connect(BillingAddressForm)
            countries={Array []}
            formName="changePlan"
          />
        </Panel.Section>
      </t>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selfServe={true}
      />
    </Grid.Column>
  </t>
</form>
`;

exports[`Form Container: Change Plan should show saved card 1`] = `
<form>
  <t>
    <Grid.Column>
      <t
        title="Select A Plan"
      >
        <Component />
      </t>
      <t
        actions={
          Array [
            Object {
              "content": "Use Another Credit Card",
              "onClick": [Function],
            },
          ]
        }
        title="Pay With Saved Payment Method"
      >
        <Panel.Section>
          <CardSummary />
        </Panel.Section>
      </t>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selfServe={true}
      />
    </Grid.Column>
  </t>
</form>
`;
